comments for biz card colors added to style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Sheila Baraga</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Google Fonts CDN-->
-    <link rel="stylesheet" href="http://fonts.google.apis.com/css?family=Nunito">
+    <link href='https://fonts.googleapis.com/css?family=Nunito:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/style.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,7 +19,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Sheila Baraga</h1>
+      <h1 id="headline">Sheila Baraga</h1>
+      <h3 id="subline">Interior Design &amp; Business Consulting</h3>
 
       <nav class="navbar" role="navigation">
         <ul class="nav nav-pills">
