desktop nav near completion

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   </head>
   <body>
     <div class="container">
-
-      <h1 class="header" id="headline">Sheila Baraga</h1>
-      <h3 class="header" id="subline">Interior Design &amp; Business Consulting</h3>
-
+      <a href="#">
+        <h1 class="header" id="headline">Sheila Baraga</h1>
+        <h3 class="header" id="subline">Interior Design &amp; Business Consulting</h3>
+      </a>
       <nav id="myNav" class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
@@ -33,13 +33,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a id="toggleName" class="navbar-brand" href="#">Sheila Baraga</a>
+<!--             <a id="toggleName" class="navbar-brand" href="#">Sheila Baraga</a> -->
           </div>
           <!-- Collect the nav links for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 
-            <ul class="nav nav-pills nav-justified">
+            <ul id="navigation" class="nav nav-pills nav-justified">
               <li><a class="navListItem" href="#">About</a></li>
               <li><a class="navListItem" href="#">Interior Design</a></li>
               <li><a class="navListItem" href="#">Business Consulting</a></li>
