--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container">
-      <a href="#">
+    <div class="container-fluid">
+      <a id="main-header" href="#">
         <h1 class="header" id="headline">Sheila Baraga</h1>
         <h3 class="header" id="subline">Interior Design &amp; Business Consulting</h3>
       </a>
@@ -90,8 +90,28 @@
       </div>
 <!-- /.carousel -->
 
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <h3 id="footer-name">Sheila Baraga</h3>
+          <h5 id="footer-title">Interior Design &amp; Business Consulting</h5>
+          <ul id="navigation" class="nav nav-pills nav-justified">
+            <li><a class="navListItem" href="#">About</a></li>
+            <li><a class="navListItem" href="#">Interior Design</a></li>
+            <li><a class="navListItem" href="#">Business Consulting</a></li>
+            <li><a class="navListItem" href="#">Village Readers</a></li>
+            <li><a class="navListItem" href="#">Contact</a></li>
+          </ul>
+          <p>&copy; 2015 Sheila Baraga</p>
+          <p>WEB SITE DESIGN &amp; DEVELOPMENT BY <a href="http://www.mattralston.com">MATT RALSTON</a> &amp; <a href="http://fanyang.ninja">FAN YANG</a></p>
+        </div>
+      </div>
 
-    </div>
+    </div><!-- /.container -->
+  </footer>
+
+    </div><!-- .container-fluid -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
