--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-8 col-md-offset-2">
           <h3 id="footer-name">Sheila Baraga</h3>
           <h5 id="footer-title">Interior Design &amp; Business Consulting</h5>
-          <ul id="navigation" class="nav nav-pills nav-justified">
-            <li><a class="navListItem" href="#">About</a></li>
-            <li><a class="navListItem" href="#">Interior Design</a></li>
-            <li><a class="navListItem" href="#">Business Consulting</a></li>
-            <li><a class="navListItem" href="#">Village Readers</a></li>
-            <li><a class="navListItem" href="#">Contact</a></li>
+          <ul id="footer-navigation" class="nav nav-pills nav-justified">
+            <li><a class="footer-nav-li" href="#">About</a></li>
+            <li><a class="footer-nav-li" href="#">Interior Design</a></li>
+            <li><a class="footer-nav-li" href="#">Business Consulting</a></li>
+            <li><a class="footer-nav-li" href="#">Village Readers</a></li>
+            <li><a class="footer-nav-li" href="#">Contact</a></li>
           </ul>
-          <p>&copy; 2015 Sheila Baraga</p>
-          <p>WEB SITE DESIGN &amp; DEVELOPMENT BY <a href="http://www.mattralston.com">MATT RALSTON</a> &amp; <a href="http://fanyang.ninja">FAN YANG</a></p>
+          <p class="credits">&copy; 2015 Sheila Baraga</p>
+          <p class="credits">WEB SITE DESIGN &amp; DEVELOPMENT BY <a target="_blank" class="footer-nav-li" href="http://www.mattralston.com">MATT RALSTON</a> &amp; <a target="_blank" class="footer-nav-li" href="http://fanyang.ninja">FAN YANG</a></p>
         </div>
       </div>
 
