added about columns to homepage v1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!--Fan for test-->
-<!--again-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -92,6 +90,23 @@
       </div>
 <!-- /.carousel -->
 
+<!-- About  ================================================== -->
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="col-md-8">
+      <p>This is an about me section where you can speak about you, your work, how you operate, etc. Cornhole art party salvia Pitchfork, viral drinking vinegar tote bag pop-up meh. Cardigan Schlitz ennui, dreamcatcher raw denim health goth kogi 3 wolf.</p>
+    </div>
+    <div class="col-md-4">
+      <p>Not sure where to start? I can help with that! Let's create something great together.</p>
+      <a href="contact.html" type="button" role="button" class="btn btn-primary btn-lg">Let's Talk!</a>
+    </div>
+  </div>
+</div>
+
+
+
+
+<!-- Footer  ================================================== -->
   <footer>
     <div class="container">
       <div class="row">
@@ -105,6 +120,7 @@
             <li><a class="footer-nav-li" href="#">Village Readers</a></li>
             <li><a class="footer-nav-li" href="#">Contact</a></li>
           </ul>
+          <p class="credits"><a class="footer-nav-li" href="https://goo.gl/maps/8o9PX">Sheila Baraga Interior Design &amp; Business Consulting 555 SE Stark Ave, Portland, OR 97206</a> | (503) 233-LOVE</p>
           <p class="credits">&copy; 2015 Sheila Baraga</p>
           <p class="credits">WEB SITE DESIGN &amp; DEVELOPMENT BY <a target="_blank" class="footer-nav-li" href="http://www.mattralston.com">MATT RALSTON</a> &amp; <a target="_blank" class="footer-nav-li" href="http://fanyang.ninja">FAN YANG</a></p>
         </div>
