--- a/index.html
+++ b/index.html
@@ -91,17 +91,20 @@
 <!-- /.carousel -->
 
 <!-- About  ================================================== -->
-<div class="row">
+<div class="row" id="about-row">
   <div class="col-md-10 col-md-offset-1">
     <div class="col-md-8">
-      <p>This is an about me section where you can speak about you, your work, how you operate, etc. Cornhole art party salvia Pitchfork, viral drinking vinegar tote bag pop-up meh. Cardigan Schlitz ennui, dreamcatcher raw denim health goth kogi 3 wolf.</p>
+      <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p>
+      <h3 id="client-sig">Jane Doe</h3>
     </div>
-    <div class="col-md-4">
-      <p>Not sure where to start? I can help with that! Let's create something great together.</p>
+    <div id="lets-talk" class="col-md-4">
+      <p class="body-text standout-text">Not sure where to start?</p>
+      <p class="body-text">I can help with that! Let's create something great together.</p>
       <a href="contact.html" type="button" role="button" class="btn btn-primary btn-lg">Let's Talk!</a>
     </div>
   </div>
 </div>
+
 
 
 
