--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 <!-- About  ================================================== -->
 <div class="row" id="about-row">
   <div class="col-md-10 col-md-offset-1">
-    <div class="col-md-8">
+    <div class="col-md-8" id="client-quote">
       <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p>
       <h3 id="client-sig">Jane Doe</h3>
     </div>
     <div id="lets-talk" class="col-md-4">
-      <p class="body-text standout-text">Not sure where to start?</p>
-      <p class="body-text">I can help with that! Let's create something great together.</p>
+      <p id="not-sure" class="body-text standout-text">Not sure where to start?</p>
+      <p class="body-text">I can help with that! Let's create something fabulous together.</p>
       <a href="contact.html" type="button" role="button" class="btn btn-primary btn-lg">Let's Talk!</a>
     </div>
   </div>
