Slides images and some links

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 
 
             <ul id="navigation" class="nav nav-pills nav-justified">
-              <li><a class="navListItem" href="#">About</a></li>
+              <li><a class="navListItem" href="index.html">About</a></li>
               <li><a class="navListItem" href="#">Interior Design</a></li>
               <li><a class="navListItem" href="#">Business Consulting</a></li>
               <li><a class="navListItem" href="#">Village Readers</a></li>
@@ -96,7 +96,7 @@
           <h3 id="footer-name">Sheila Baraga</h3>
           <h5 id="footer-title">Interior Design &amp; Business Consulting</h5>
           <ul id="footer-navigation" class="nav nav-pills nav-justified">
-            <li><a class="footer-nav-li" href="#">About</a></li>
+            <li><a class="footer-nav-li" href="index.html">About</a></li>
             <li><a class="footer-nav-li" href="#">Interior Design</a></li>
             <li><a class="footer-nav-li" href="#">Business Consulting</a></li>
             <li><a class="footer-nav-li" href="#">Village Readers</a></li>
