changed nav a footer of index and contact files

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 
             <ul id="navigation" class="nav nav-pills nav-justified">
+              <li><a class="navListItem" href="#">Home</a></li>
               <li><a class="navListItem" href="#">About</a></li>
               <li><a class="navListItem" href="#">Interior Design</a></li>
               <li><a class="navListItem" href="#">Business Consulting</a></li>
@@ -151,10 +152,11 @@
           <h3 id="footer-name">Sheila Baraga</h3>
           <h5 id="footer-title">Interior Design &amp; Business Consulting</h5>
           <ul id="footer-navigation" class="nav nav-pills nav-justified">
-            <li><a class="footer-nav-li" href="#">About</a></li>
-            <li><a class="footer-nav-li" href="#">Interior Design</a></li>
-            <li><a class="footer-nav-li" href="#">Business Consulting</a></li>
-            <li><a class="footer-nav-li" href="#">Village Readers</a></li>
+            <li><a class="footer-nav-li" href="index.html">Home</a></li>
+            <li><a class="footer-nav-li" href="about.html">About</a></li>
+            <li><a class="footer-nav-li" href="interior-design.html">Interior Design</a></li>
+            <li><a class="footer-nav-li" href="business-consulting.html">Business Consulting</a></li>
+            <li><a class="footer-nav-li" href="village-readers.html">Village Readers</a></li>
             <li><a class="footer-nav-li" href="contact.html">Contact</a></li>
           </ul>
           <p class="credits"><a class="footer-nav-li" href="https://goo.gl/maps/f791F" target="_blank">Sheila Baraga Interior Design &amp; Business Consulting 555 SE Stark Ave, Portland, OR 97206</a> | (503) 233-LOVE</p>
