changed nav a footer of index about contact files

--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,10 @@
 
 
             <ul id="navigation" class="nav nav-pills nav-justified">
-              <li><a class="navListItem" href="#">Home</a></li>
-              <li><a class="navListItem" href="#">About</a></li>
-              <li><a class="navListItem" href="#">Interior Design</a></li>
-              <li><a class="navListItem" href="#">Business Consulting</a></li>
+              <li><a class="navListItem" href="index.html">Home</a></li>
+              <li><a class="navListItem" href="about.html">About</a></li>
+              <li><a class="navListItem" href="interior-design.html">Interior Design</a></li>
+              <li><a class="navListItem" href="business-consulting.html">Business Consulting</a></li>
               <li><a class="navListItem" href="#">Village Readers</a></li>
               <li><a class="navListItem" href="contact.html">Contact</a></li>
             </ul>
