--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li><a class="navListItem" href="about.html">About</a></li>
               <li><a class="navListItem" href="interior-design.html">Interior Design</a></li>
               <li><a class="navListItem" href="business-consulting.html">Business Consulting</a></li>
-              <li><a class="navListItem" href="#">Village Readers</a></li>
+              <li><a class="navListItem" href="village-readers.html">Village Readers</a></li>
               <li><a class="navListItem" href="contact.html">Contact</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
