--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,12 @@
 
 
             <ul id="navigation" class="nav nav-pills nav-justified">
-              <li><a class="navListItem" href="index.html">About</a></li>
-              <li><a class="navListItem" href="#">Interior Design</a></li>
+              <li><a class="navListItem" href="index.html">Home</a></li>
+              <li><a class="navListItem" href="about.html">About</a></li>
+              <li><a class="navListItem" href="interior-design.html">Interior Design</a></li>
               <li><a class="navListItem" href="#">Business Consulting</a></li>
-              <li><a class="navListItem" href="#">Village Readers</a></li>
-              <li><a class="navListItem" href="#">Contact</a></li>
+              <li><a class="navListItem" href="village-readers.html">Village Readers</a></li>
+              <li><a class="navListItem" href="contact.html">Contact</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -96,11 +97,12 @@
           <h3 id="footer-name">Sheila Baraga</h3>
           <h5 id="footer-title">Interior Design &amp; Business Consulting</h5>
           <ul id="footer-navigation" class="nav nav-pills nav-justified">
-            <li><a class="footer-nav-li" href="index.html">About</a></li>
-            <li><a class="footer-nav-li" href="#">Interior Design</a></li>
+            <li><a class="footer-nav-li" href="index.html">Home</a></li>
+            <li><a class="footer-nav-li" href="about.html">About</a></li>
+            <li><a class="footer-nav-li" href="interior-design.html">Interior Design</a></li>
             <li><a class="footer-nav-li" href="#">Business Consulting</a></li>
-            <li><a class="footer-nav-li" href="#">Village Readers</a></li>
-            <li><a class="footer-nav-li" href="#">Contact</a></li>
+            <li><a class="footer-nav-li" href="village-readers.html">Village Readers</a></li>
+            <li><a class="footer-nav-li" href="contact.html">Contact</a></li>
           </ul>
           <p class="credits">&copy; 2015 Sheila Baraga</p>
           <p class="credits">WEB SITE DESIGN &amp; DEVELOPMENT BY <a target="_blank" class="footer-nav-li" href="http://www.mattralston.com">MATT RALSTON</a> &amp; <a target="_blank" class="footer-nav-li" href="http://fanyang.ninja">FAN YANG</a></p>
