--- a/interior-design.html
+++ b/interior-design.html
@@ -50,95 +50,15 @@
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
-
-
-<!-- Carousel  ================================================== -->
-
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="5"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="6"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="7"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img class="picshar" src="images/BA1.jpg" alt="#">
-            <div class="carousel-caption" id="textcolor">
-              2925 SE Belmont Interior
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA2.jpg" alt="#">
-            <div class="carousel-caption">
-              2925 SE Belmont Exterior
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA3.jpg" alt="#">
-            <div class="carousel-caption" id="textcolor">
-              Morrison Empire Room
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA4.jpg" alt="#">
-            <div class="carousel-caption" id="textcolor">
-              Morrison Empire Room
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA5.jpg" alt="#">
-            <div class="carousel-caption">
-              Sun Rice Restaurant
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA6.jpg" alt="#">
-            <div class="carousel-caption">
-              Sapphire Hotel
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA7.jpg" alt="#">
-            <div class="carousel-caption">
-              The Green Room
-            </div>
-          </div>
-          <!-- Previous Projects -->
-        </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+<!--video-->
+<div class="team-gallery-top">
+        <h3>Interior Design</h3>
+        <p> If you’re thinking about building a business from the ground up or shaking up the business you already have, feel free to give me a call. I will happily come and look at your plans or you can come to my office and we can discuss your goals. I’d love to help you build the business of your dreams or make your existing business flourish. And if you want to sell your existing business, let’s talk about that.</p>
       </div>
-<!-- /.carousel -->
-
-<!-- About  ================================================== -->
-<div class="row" id="about-row">
-  <div class="col-md-10 col-md-offset-1">
-    <div class="col-md-8" id="client-quote">
-      <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p>
-      <h3 id="client-sig">Jane Doe</h3>
-    </div>
-    <div id="lets-talk" class="col-md-4">
-      <p id="not-sure" class="body-text standout-text">Not sure where to start?</p>
-      <p class="body-text">I can help with that! Let's create something fabulous together.</p>
-      <a href="contact.html" type="button" role="button" class="btn btn-primary btn-lg">Let's Talk!</a>
-    </div>
-  </div>
+  <div class="contact" id="contact">
+    <iframe class="video" src="https://player.vimeo.com/video/38621491?title=0&amp;byline=0&amp;portrait=0" width="1100" height="619" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 </div>
+
 
 
 
