--- a/village-readers.html
+++ b/village-readers.html
@@ -40,7 +40,7 @@
 
 
             <ul id="navigation" class="nav nav-pills nav-justified">
-             <li><a class="navListItem" href="index.html">Home</a></li>
+              <li><a class="navListItem" href="index.html">Home</a></li>
               <li><a class="navListItem" href="about.html">About</a></li>
               <li><a class="navListItem" href="interior-design.html">Interior Design</a></li>
               <li><a class="navListItem" href="#">Business Consulting</a></li>
@@ -50,101 +50,57 @@
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
-
-
-<!-- Carousel  ================================================== -->
-
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="5"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="6"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="7"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img class="picshar" src="images/BA1.jpg" alt="#">
-            <div class="carousel-caption" id="textcolor">
-              2925 SE Belmont Interior
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA2.jpg" alt="#">
-            <div class="carousel-caption">
-              2925 SE Belmont Exterior
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA3.jpg" alt="#">
-            <div class="carousel-caption" id="textcolor">
-              Morrison Empire Room
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA4.jpg" alt="#">
-            <div class="carousel-caption" id="textcolor">
-              Morrison Empire Room
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA5.jpg" alt="#">
-            <div class="carousel-caption">
-              Sun Rice Restaurant
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA6.jpg" alt="#">
-            <div class="carousel-caption">
-              Sapphire Hotel
-            </div>
-          </div>
-          <div class="item">
-            <img class="picshar" src="images/BA7.jpg" alt="#">
-            <div class="carousel-caption">
-              The Green Room
-            </div>
-          </div>
-          <!-- Previous Projects -->
-        </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+<!--contact information-->
+<div class="team-gallery">
+    <div class="container">
+      <div class="team-gallery-top">
+        <h3>Village Readers Collective</h3>
+        <p>Village Readers Collective is made up of talented and wonderful healers & fortune tellers. The readers can be seen by appointment at our lovely little shop on SE 16th and Stark at 512 se 16th Avenue. The readers will help you gain insight into your life path, help you make decisions at a crossroads or help you set goals for your future. These warm and loving readers and intuitives are available by appointment by calling me (or for more information) at 503.318.8338. I’m happy to answer any questions you may have. I think you’ll be very happy you gave it a try.</p>
       </div>
-<!-- /.carousel -->
-
-<!-- About  ================================================== -->
-<div class="row" id="about-row">
-  <div class="col-md-10 col-md-offset-1">
-    <div class="col-md-8" id="client-quote">
-      <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p>
-      <h3 id="client-sig">Jane Doe</h3>
-    </div>
-    <div id="lets-talk" class="col-md-4">
-      <p id="not-sure" class="body-text standout-text">Not sure where to start?</p>
-      <p class="body-text">I can help with that! Let's create something fabulous together.</p>
-      <a href="contact.html" type="button" role="button" class="btn btn-primary btn-lg">Let's Talk!</a>
+        <div class="col-md-3 team-left-top">
+          <img src="images/men-4.jpg">
+          <div class="team-left-bottom">
+            <h4>Wise Guidance Tarot</h4>
+            <P>By Rhonda Kennedy</P>
+            <div class="bton">
+              <a href="#">MORE</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 team-left-top">
+          <img src="images/men-3.jpg">
+          <div class="team-left-bottom">
+            <h4>Psychic Readings</h4>
+            <P>By Dr. Shannon Brown</P>
+            <div class="bton">
+              <a href="#">MORE</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 team-left-top">
+          <img src="images/men-2.jpg">
+          <div class="team-left-bottom">
+            <h4>Astrological predictions</h4>
+            <P>By Mark Lawrence</P>
+            <div class="bton">
+              <a href="#">MORE</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 team-left-top">
+          <img src="images/men-1.jpg">
+          <div class="team-left-bottom">
+            <h4>Intuitive Counseling</h4>
+            <P>By Gabrielle Renee</P>
+            <div class="bton">
+              <a href="#">MORE</a>
+            </div>
+          </div>
+        </div>
     </div>
   </div>
-</div>
 
-
-
-
-
-<!-- Footer  ================================================== -->
+<!--Footer-->
   <footer>
     <div class="container">
       <div class="row">
@@ -159,7 +115,6 @@
             <li><a class="footer-nav-li" href="village-readers.html">Village Readers</a></li>
             <li><a class="footer-nav-li" href="contact.html">Contact</a></li>
           </ul>
-          <p class="credits"><a class="footer-nav-li" href="https://goo.gl/maps/f791F" target="_blank">Sheila Baraga Interior Design &amp; Business Consulting 555 SE Stark Ave, Portland, OR 97206</a> | (503) 233-LOVE</p>
           <p class="credits">&copy; 2015 Sheila Baraga</p>
           <p class="credits">WEB SITE DESIGN &amp; DEVELOPMENT BY <a target="_blank" class="footer-nav-li" href="http://www.mattralston.com">MATT RALSTON</a> &amp; <a target="_blank" class="footer-nav-li" href="http://fanyang.ninja">FAN YANG</a></p>
         </div>
