added about.html content

--- a/about.html
+++ b/about.html
@@ -55,14 +55,13 @@
 <!-- About  ================================================== -->
 <div class="row" id="about-row">
   <div class="col-md-10 col-md-offset-1">
-    <div class="col-md-8" id="client-quote">
-      <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p>
-      <h3 id="client-sig">Jane Doe</h3>
+    <div class="col-sm-4" id="about-pic">
+      <img id="sheila-pic" src="images/Sheilapic.jpg">
     </div>
-    <div id="lets-talk" class="col-md-4">
-      <p id="not-sure" class="body-text standout-text">Not sure where to start?</p>
-      <p class="body-text">I can help with that! Let's create something fabulous together.</p>
-      <a href="contact.html" type="button" role="button" class="btn btn-primary btn-lg">Let's Talk!</a>
+    <div class="col-sm-8">
+      <h1 id="about-sig">Sheila Baraga</h1>
+      <p>Deadlights jack lad schooner scallywag dance the hempen jig carouser broadside cable strike colors. Bring a spring upon her cable holystone blow the man down spanker Shiver me timbers to go on account lookout wherry doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to.</p>
+      <p>Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast yardarm. Pinnace holystone mizzenmast quarter crow's nest nipperkin grog yardarm hempen halter furl. Swab barque interloper chantey doubloon starboard grog black jack gangway rutters.</p>
     </div>
   </div>
 </div>
