Interior, reader and contact

--- a/index.html
+++ b/index.html
@@ -61,38 +61,38 @@
           <li data-target="#carousel-example-generic" data-slide-to="1"></li>
           <li data-target="#carousel-example-generic" data-slide-to="3"></li>
           <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+          <!--<li data-target="#carousel-example-generic" data-slide-to="5"></li>
           <li data-target="#carousel-example-generic" data-slide-to="6"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="7"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="7"></li>-->
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img class="picshar" src="images/BA1.jpg" alt="#">
+            <img class="picshar" src="images/Restaurant1.jpg" alt="#">
             <div class="carousel-caption" id="textcolor">
               2925 SE Belmont Interior
             </div>
           </div>
           <div class="item">
-            <img class="picshar" src="images/BA2.jpg" alt="#">
+            <img class="picshar" src="images/Restaurant3.jpg" alt="#">
             <div class="carousel-caption">
               2925 SE Belmont Exterior
             </div>
           </div>
           <div class="item">
-            <img class="picshar" src="images/BA3.jpg" alt="#">
+            <img class="picshar" src="images/Restaurant4.jpg" alt="#">
             <div class="carousel-caption" id="textcolor">
               Morrison Empire Room
             </div>
           </div>
           <div class="item">
-            <img class="picshar" src="images/BA4.jpg" alt="#">
+            <img class="picshar" src="images/Restaurant2.jpg" alt="#">
             <div class="carousel-caption" id="textcolor">
               Morrison Empire Room
             </div>
           </div>
-          <div class="item">
+          <!--<div class="item">
             <img class="picshar" src="images/BA5.jpg" alt="#">
             <div class="carousel-caption">
               Sun Rice Restaurant
@@ -109,7 +109,7 @@
             <div class="carousel-caption">
               The Green Room
             </div>
-          </div>
+          </div>-->
           <!-- Previous Projects -->
         </div>
 
@@ -164,8 +164,9 @@
           <p class="credits">WEB SITE DESIGN &amp; DEVELOPMENT BY <a target="_blank" class="footer-nav-li" href="http://www.mattralston.com">MATT RALSTON</a> &amp; <a target="_blank" class="footer-nav-li" href="http://fanyang.ninja">FAN YANG</a></p>
         </div>
       </div>
+    </div>
 
-    </div><!-- /.container -->
+    
   </footer>
 
     </div><!-- .container-fluid -->
