--- a/village-readers.html
+++ b/village-readers.html
@@ -101,7 +101,7 @@
   </div>
 
 <!--Footer-->
-  <footer>
+ <footer>
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
@@ -115,12 +115,14 @@
             <li><a class="footer-nav-li" href="village-readers.html">Village Readers</a></li>
             <li><a class="footer-nav-li" href="contact.html">Contact</a></li>
           </ul>
+          <p class="credits"><a class="footer-nav-li" href="https://goo.gl/maps/f791F" target="_blank">Sheila Baraga Interior Design &amp; Business Consulting 555 SE Stark Ave, Portland, OR 97206</a> | (503) 233-LOVE</p>
           <p class="credits">&copy; 2015 Sheila Baraga</p>
           <p class="credits">WEB SITE DESIGN &amp; DEVELOPMENT BY <a target="_blank" class="footer-nav-li" href="http://www.mattralston.com">MATT RALSTON</a> &amp; <a target="_blank" class="footer-nav-li" href="http://fanyang.ninja">FAN YANG</a></p>
         </div>
       </div>
+    </div>
 
-    </div><!-- /.container -->
+    
   </footer>
 
     </div><!-- .container-fluid -->
