fixed nav and footer merge conflicts

--- a/interior-design.html
+++ b/interior-design.html
@@ -40,10 +40,10 @@
 
 
             <ul id="navigation" class="nav nav-pills nav-justified">
-             <li><a class="navListItem" href="index.html">Home</a></li>
+              <li><a class="navListItem" href="index.html">Home</a></li>
               <li><a class="navListItem" href="about.html">About</a></li>
               <li><a class="navListItem" href="interior-design.html">Interior Design</a></li>
-              <li><a class="navListItem" href="#">Business Consulting</a></li>
+              <li><a class="navListItem" href="business-consulting.html">Business Consulting</a></li>
               <li><a class="navListItem" href="village-readers.html">Village Readers</a></li>
               <li><a class="navListItem" href="contact.html">Contact</a></li>
             </ul>
@@ -75,7 +75,7 @@
             <li><a class="footer-nav-li" href="index.html">Home</a></li>
             <li><a class="footer-nav-li" href="about.html">About</a></li>
             <li><a class="footer-nav-li" href="interior-design.html">Interior Design</a></li>
-            <li><a class="footer-nav-li" href="#">Business Consulting</a></li>
+            <li><a class="footer-nav-li" href="business-consulting.html">Business Consulting</a></li>
             <li><a class="footer-nav-li" href="village-readers.html">Village Readers</a></li>
             <li><a class="footer-nav-li" href="contact.html">Contact</a></li>
           </ul>
