--- a/village-readers.html
+++ b/village-readers.html
@@ -43,7 +43,7 @@
               <li><a class="navListItem" href="index.html">Home</a></li>
               <li><a class="navListItem" href="about.html">About</a></li>
               <li><a class="navListItem" href="interior-design.html">Interior Design</a></li>
-              <li><a class="navListItem" href="#">Business Consulting</a></li>
+              <li><a class="navListItem" href="business-consulting.html">Business Consulting</a></li>
               <li><a class="navListItem" href="village-readers.html">Village Readers</a></li>
               <li><a class="navListItem" href="contact.html">Contact</a></li>
             </ul>
@@ -111,7 +111,7 @@
             <li><a class="footer-nav-li" href="index.html">Home</a></li>
             <li><a class="footer-nav-li" href="about.html">About</a></li>
             <li><a class="footer-nav-li" href="interior-design.html">Interior Design</a></li>
-            <li><a class="footer-nav-li" href="#">Business Consulting</a></li>
+            <li><a class="footer-nav-li" href="business-consulting.html">Business Consulting</a></li>
             <li><a class="footer-nav-li" href="village-readers.html">Village Readers</a></li>
             <li><a class="footer-nav-li" href="contact.html">Contact</a></li>
           </ul>
@@ -122,7 +122,7 @@
       </div>
     </div>
 
-    
+
   </footer>
 
     </div><!-- .container-fluid -->
