fixed contact page header

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
       <img id="sheila-pic" src="images/Sheilapic.jpg">
     </div>
     <div class="col-sm-8">
-      <h1 id="about-sig">Sheila Baraga</h1>
+      <h1 class="about-sig">Sheila Baraga</h1>
       <p>Deadlights jack lad schooner scallywag dance the hempen jig carouser broadside cable strike colors. Bring a spring upon her cable holystone blow the man down spanker Shiver me timbers to go on account lookout wherry doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to.</p>
       <p>Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast yardarm. Pinnace holystone mizzenmast quarter crow's nest nipperkin grog yardarm hempen halter furl. Swab barque interloper chantey doubloon starboard grog black jack gangway rutters.</p>
     </div>
