--- a/contact.html
+++ b/contact.html
@@ -51,14 +51,28 @@
         </div><!-- /.container-fluid -->
       </nav>
 <!--contact information-->
-<div class="dhavan">
+      <div class="row" id="contact-row">
+        <div class="col-md-10 col-md-offset-1">
+          <div class="col-sm-4" id="about-pic">
+            <img id="sheila-pic" src="images/Sheilapic.jpg">
+          </div>
+          <div class="col-sm-8">
+            <h1 id="contact-sig" class="about-sig">Sheila Baraga</h1>
+            <p>518 SE 16th Ave, Portland, OR 97214</p>
+            <p>Office hours: 10am-6pm weekdays</p>
+            <p>Office 503-233-LOVE&nbsp;Cell  503-318-8338 (call or text)</p>
+          </div>
+        </div>
+      </div>
+
+<!-- <div class="dhavan">
   <div class="container">
     <div class="callbacks_container">
                 <div class="dhavan-left">
                   <img src="images/Sheilapic.jpg" alt="">
                 </div>
                 <div class="dhavan-right">
-                  <h3>Sheila Baraga</h3>
+                  <h3 id="contact-sig" class="about-sig">Sheila Baraga</h3>
                   <br>
                   <div class="dhavan-bottom">
                     <p>518 SE 16th Ave, Portland, OR 97214<br>
@@ -69,7 +83,7 @@
 
     </div>
   </div>
-</div>
+</div> -->
 <!--end of contact infomation-->
 <!--contact map and form-->
 <div class="contact" id="contact">
