--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,8 @@
             <h1 id="contact-sig" class="about-sig">Sheila Baraga</h1>
             <p>518 SE 16th Ave, Portland, OR 97214</p>
             <p>Office hours: 10am-6pm weekdays</p>
-            <p>Office 503-233-LOVE&nbsp;Cell  503-318-8338 (call or text)</p>
+            <p>Office: 503-233-LOVE</p>
+            <p>Cell: 503-318-8338 (call or text)</p>
           </div>
         </div>
       </div>
