added selected class to nav

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
               <li><a class="navListItem" href="interior-design.html">Interior Design</a></li>
               <li><a class="navListItem" href="business-consulting.html">Business Consulting</a></li>
               <li><a class="navListItem" href="village-readers.html">Village Readers</a></li>
-              <li><a class="navListItem" href="contact.html">Contact</a></li>
+              <li><a class="navListItem selected" href="contact.html">Contact</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
