--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
             <ul id="navigation" class="nav nav-pills nav-justified">
               <li><a class="navListItem" href="index.html">Home</a></li>
-              <li><a class="navListItem" href="about.html">About</a></li>
+              <li><a class="navListItem selected" href="about.html">About</a></li>
               <li><a class="navListItem" href="interior-design.html">Interior Design</a></li>
               <li><a class="navListItem" href="business-consulting.html">Business Consulting</a></li>
               <li><a class="navListItem" href="village-readers.html">Village Readers</a></li>
