--- a/business-consulting.html
+++ b/business-consulting.html
@@ -43,7 +43,7 @@
               <li><a class="navListItem" href="index.html">Home</a></li>
               <li><a class="navListItem" href="about.html">About</a></li>
               <li><a class="navListItem" href="interior-design.html">Interior Design</a></li>
-              <li><a class="navListItem" href="business-consulting.html">Business Consulting</a></li>
+              <li><a class="navListItem selected" href="business-consulting.html">Business Consulting</a></li>
               <li><a class="navListItem" href="village-readers.html">Village Readers</a></li>
               <li><a class="navListItem" href="contact.html">Contact</a></li>
             </ul>
