--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
             <ul id="navigation" class="nav nav-pills nav-justified">
-              <li><a class="navListItem" href="index.html">Home</a></li>
+              <li><a class="navListItem selected" href="index.html">Home</a></li>
               <li><a class="navListItem" href="about.html">About</a></li>
               <li><a class="navListItem" href="interior-design.html">Interior Design</a></li>
               <li><a class="navListItem" href="business-consulting.html">Business Consulting</a></li>
