--- a/project-management.html
+++ b/project-management.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
       <a id="main-header" href="#">
         <h1 class="header" id="headline">Sheila Baraga</h1>
-        <h3 class="header" id="subline">Interior Design &amp; Business Consulting</h3>
+        <h3 class="header" id="subline">Design &amp; Business Consulting</h3>
       </a>
       <nav id="myNav" class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
@@ -42,7 +42,7 @@
             <ul id="navigation" class="nav nav-pills nav-justified">
               <li><a class="navListItem" href="index.html">Home</a></li>
               <li><a class="navListItem" href="about.html">About</a></li>
-              <li><a class="navListItem selected" href="interior-design.html">Interior Design</a></li>
+              <li><a class="navListItem selected" href="project-management.html">Project Management</a></li>
               <li><a class="navListItem" href="business-consulting.html">Business Consulting</a></li>
               <li><a class="navListItem" href="village-readers.html">Village Readers</a></li>
               <li><a class="navListItem" href="contact.html">Contact</a></li>
@@ -52,7 +52,7 @@
       </nav>
 <!--video-->
 <div class="team-gallery-top">
-        <h3>Interior Design</h3>
+        <h3>Project Management</h3>
         <p> If you’re thinking about building a business from the ground up or shaking up the business you already have, feel free to give me a call. I will happily come and look at your plans or you can come to my office and we can discuss your goals. I’d love to help you build the business of your dreams or make your existing business flourish. And if you want to sell your existing business, let’s talk about that.</p>
       </div>
   <div class="contact" id="contact">
@@ -66,11 +66,11 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h3 id="footer-name">Sheila Baraga</h3>
-            <h5 id="footer-title">Interior Design &amp; Business Consulting</h5>
+            <h5 id="footer-title">Design &amp; Business Consulting</h5>
             <ul id="footer-navigation" class="nav nav-pills nav-justified">
               <li><a class="footer-nav-li" href="index.html">Home</a></li>
               <li><a class="footer-nav-li" href="about.html">About</a></li>
-              <li><a class="footer-nav-li" href="interior-design.html">Interior Design</a></li>
+              <li><a class="footer-nav-li" href="project-management.html">Project Management</a></li>
               <li><a class="footer-nav-li" href="business-consulting.html">Business Consulting</a></li>
               <li><a class="footer-nav-li" href="village-readers.html">Village Readers</a></li>
               <li><a class="footer-nav-li" href="contact.html">Contact</a></li>
