updated contact info

--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,10 @@
           </div>
           <div class="col-sm-8">
             <h1 id="contact-sig" class="about-sig">Sheila Baraga</h1>
-            <p>518 SE 16th Ave, Portland, OR 97214</p>
+            <p>423 SE 15th Avenue, Portland, OR 97214</p>
             <p>Office hours: 10am-6pm weekdays</p>
-            <p>Office: 503-233-LOVE</p>
-            <p>Cell: 503-318-8338 (call or text)</p>
+            <p>Business Hours: 503-318-8338 (call or text)</p>
+            <p>After Hours: 503-233-LOVE (leave message)</p>
           </div>
         </div>
       </div>
