Contact form, village-reader and project mgm pages updated

--- a/business-consulting.html
+++ b/business-consulting.html
@@ -53,12 +53,23 @@
 <!--video-->
       <div class="team-gallery-top">
         <h3>Business Consulting</h3>
-        <p> If you’re thinking about building a business from the ground up or shaking up the business you already have, feel free to give me a call. I will happily come and look at your plans or you can come to my office and we can discuss your goals. I’d love to help you build the business of your dreams or make your existing business flourish. And if you want to sell your existing business, let’s talk about that.</p>
+        <p>  If you’re thinking about building a business from the ground up or shaking up the business you already have, feel free to give me a call.  I will happily come and look at your plans or you can come to my office and we can discuss your goals.   I’d love to help you build the business of your dreams or make your existing business flourish.   And if you want to sell your existing business, let’s talk about that.  The services I can offer you are:</p>
 <!-- The p tag below is what Sheila wanted to caption the video -->
-        <p>Sheila has designed, built, operated, and sold six neighborhood bars and restaurants in Portland. This video shows is a brief synopsis of those projects.</p>
+</br>
+        <p>Concept Development</p>
+        <p>Location Scouting</p>
+        <p>City, Environmental Health, OLCC licensing & permits from start to finish</p>
+        <p>Color and Theme Design</p>
+        <p>Furniture and Equipment Procurement</p>
+        <p>Feng-shui for Success</p>
+        <p>Hiring and Training of Staff</p>
+        <p>Staff Team building</p>
+        <p>Public Relations</p>
+        <p>Making your business desirable to a perspective buyer</p>
+        <p>Lease Negotiations</p>
       </div>
-      <div class="contact" id="contact">
-       <iframe class="video" src="https://player.vimeo.com/video/38621491?title=0&amp;byline=0&amp;portrait=0" width="1100" height="619" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+      <div class="video">
+       <iframe src="https://player.vimeo.com/video/38621491?title=0&amp;byline=0&amp;portrait=0" width="1100" height="619" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
       </div>
 
 
