--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,7 @@
 </div> -->
 <!--end of contact infomation-->
 <!--contact map and form-->
+<!--old form
 <div class="contact" id="contact">
         <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d179134.82901896958!2d-122.67776794726562!3d45.45002481445717!3m2!1i1024!2i768!4f13.1!5e0!3m2!1szh-CN!2sus!4v1442195319097" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         <div class="container">
@@ -102,9 +103,32 @@
           </div>
         </div>
       </div>
+    -->
 <!--end of contact form-->
 
-
+<!--new form-->
+      <div id="Contact" class="contact">
+  <div class="container">
+    <div class="content_middle_bottom">
+          <h3 class="tz-title-3">Get In Touch</h3>
+      <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
+    </div>
+    <div class="col-sm-8 grid_2">
+       <h3>Say hello!</h3>
+         <form action="//formspree.io/10088587@qq.com" method="POST">
+       <input type="text" class="text" name="name" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}">
+       <input type="text" class="text" name="_replyto" value="email address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
+       <textarea value="Message" name="name"  type="submit" onfocus="this.value= '';" onblur="if (this.value == '') {this.value = 'Message';}">Message</textarea>
+       <input name="submit" type="submit" value="Send Message">
+      </form>
+      </div>
+    <div class="col-sm-4 map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d179134.82901896958!2d-122.67776794726562!3d45.45002481445717!3m2!1i1024!2i768!4f13.1!5e0!3m2!1szh-CN!2sus!4v1442195319097" frameborder="0" style="border:0"> </iframe>
+    </div>
+    <div class="clearfix"> </div>
+  </div>
+  </div>
+  <!--end of new form-->
 <!-- Footer  ================================================== -->
     <footer>
       <div class="container">
