--- a/project-management.html
+++ b/project-management.html
@@ -55,9 +55,9 @@
         <h3>Project Management</h3>
         <p> If you’re thinking about building a business from the ground up or shaking up the business you already have, feel free to give me a call. I will happily come and look at your plans or you can come to my office and we can discuss your goals. I’d love to help you build the business of your dreams or make your existing business flourish. And if you want to sell your existing business, let’s talk about that.</p>
       </div>
-  <div class="contact" id="contact">
+  <!--video><div class="contact" id="contact">
     <iframe class="video" src="https://player.vimeo.com/video/38621491?title=0&amp;byline=0&amp;portrait=0" width="1100" height="619" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
-</div>
+</div>-->
 
 
 <!-- Footer  ================================================== -->
