--- a/village-readers.html
+++ b/village-readers.html
@@ -60,10 +60,11 @@
         <div class="col-md-3 team-left-top">
           <img src="images/men-4.jpg">
           <div class="team-left-bottom">
-            <h4>Wise Guidance Tarot</h4>
+            <h4>Traditional Tarot</h4>
             <P>By Rhonda Kennedy</P>
             <div class="bton">
-              <a href="#">MORE</a>
+             <!--<div id = "showdiv0" style="display:none;">Nothing Yet!</div>-->
+              <a id = "more"  href="#" onclick="showHideCode()">MORE</a>
             </div>
           </div>
         </div>
@@ -73,33 +74,76 @@
             <h4>Psychic Readings</h4>
             <P>By Dr. Shannon Brown</P>
             <div class="bton">
-              <a href="#">MORE</a>
+              <!--<div id = "showdiv1" style="display:none;">Nothing Yet!</div>-->
+              <a id = "more" href="#" onclick="showHideCode()">MORE</a>
             </div>
           </div>
         </div>
         <div class="col-md-3 team-left-top">
           <img src="images/men-2.jpg">
           <div class="team-left-bottom">
-            <h4>Astrological predictions</h4>
-            <P>By Mark Lawrence</P>
+            <h4>Astrology</h4>
+            <P>By Fern Capella</P>
             <div class="bton">
-              <a href="#">MORE</a>
+              <!--<div id = "showdiv2" style="display:none;">Nothing Yet!</div>-->
+              <a id = "more" href="#" onclick="showHideCode()">MORE</a>
             </div>
           </div>
         </div>
         <div class="col-md-3 team-left-top">
           <img src="images/men-1.jpg">
           <div class="team-left-bottom">
-            <h4>Intuitive Counseling</h4>
+            <h4>Energy Healings</h4>
+            <P>By Cris Chapman</P>
+            <div class="bton">
+              <!--<div id = "showdiv3" style="display:none;">Nothing Yet!</div>-->
+              <a id = "more" href="#" onclick="showHideCode()">MORE</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 team-left-top">
+          <img src="images/men-1.jpg">
+          <div class="team-left-bottom">
+            <h4>Empathic Tarot</h4>
+            <P>By Kiki</P>
+            <div class="bton">
+              <!--<div id = "showdiv4" style="display:none;">Nothing Yet!</div>-->
+              <a id = "more" href="#" onclick="showHideCode()">MORE</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 team-left-top">
+          <img src="images/men-1.jpg">
+          <div class="team-left-bottom">
+            <h4>Birth Chart Readings</h4>
+            <P>By Rainstar</P>
+            <div class="bton">
+              <!--<div id = "showdiv5" style="display:none;">Nothing Yet!</div>-->
+              <a id = "more" href="#" onclick="showHideCode()">MORE</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 team-left-top">
+          <img src="images/men-1.jpg">
+          <div class="team-left-bottom">
+            <h4>Intuitive Readings</h4>
             <P>By Gabrielle Renee</P>
             <div class="bton">
-              <a href="#">MORE</a>
+              <!--<div id = "showdiv6" style="display:none;">Nothing Yet!</div>-->
+              <a id = "more" href="#" href = "showHideCode()">MORE</a>
             </div>
           </div>
         </div>
     </div>
   </div>
-
+<!--More and CLose>
+<script type="text/javascript">
+ 
+          function showHideCode(){
+             $("#showdiv").toggle();
+             $("#more").html($("#more").html()=="MORE"?"ClOSE":"MORE");
+          }
+</script>-->
 
 <!-- Footer  ================================================== -->
     <footer>
