updated village readers photos

--- a/index.html
+++ b/index.html
@@ -129,8 +129,12 @@
 <div class="row" id="about-row">
   <div class="col-md-10 col-md-offset-1">
     <div class="col-md-8" id="client-quote">
-      <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p>
-      <h3 id="client-sig">Jane Doe</h3>
+      <!-- <p class="body-text">"<span class="standout-text">I can't think Sheila enough for what she has done for my business.</span> It was great before, but now sales are booming, life is good, and even my cat seems happier! Thank you so much."</p> -->
+      <p>"Sheila's visionary skills have repeatedly transformed the rattiest, greasiest, crumbling interiors into a place of light, color and joy that is admired by every person through the door. Her taste in colors, textures and space were honed over decades of research. Constantly in the planning phase, she'll convert the tiniest space into a glorious sun room for plants, or a mere window sill is revolutionized into a roost for your bird.
+      Her revolutionary creativity also supports environmental causes.
+      Any restaurant or vacation rental she creates will succeed because she is warm, inviting, patient and extremely attentive to every customer's needs."</p>
+      <h3 id="client-sig">LeeAnn Gauthier</h3>
+      <a href="www.portlandparalegal.com"><h5>CEO, Portland Paralegal Services</h5></a>
     </div>
     <div id="lets-talk" class="col-md-4">
       <p id="not-sure" class="body-text standout-text">Not sure where to start?</p>
