--- a/village-readers.html
+++ b/village-readers.html
@@ -55,10 +55,10 @@
     <div class="container">
       <div class="team-gallery-top">
         <h3>Village Readers Collective</h3>
-        <p>Village Readers Collective is made up of talented and wonderful healers & fortune tellers. The readers can be seen by appointment at our lovely little shop on SE 16th and Stark at 512 se 16th Avenue. The readers will help you gain insight into your life path, help you make decisions at a crossroads or help you set goals for your future. These warm and loving readers and intuitives are available by appointment by calling me (or for more information) at 503.318.8338. I’m happy to answer any questions you may have. I think you’ll be very happy you gave it a try.</p>
+        <p>Village Readers Collective is made up of talented and wonderful healers & fortune tellers. The readers can be seen by appointment at our lovely little shop on SE 16th and Stark at 512 se 16th Avenue. The readers will help you gain insight into your life path, help you make decisions at a crossroads or help you set goals for your future. These warm and loving readers and intuitives are available by appointment by calling me at 503.318.8338. I’m happy to answer any questions you may have. I think you’ll be very happy you gave it a try.</p>
       </div>
         <div class="col-md-3 team-left-top">
-          <img src="images/men-4.jpg">
+          <img src="images/rhonda.jpg">
           <div class="team-left-bottom">
             <h4>Traditional Tarot</h4>
             <P>By Rhonda Kennedy</P>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="col-md-3 team-left-top">
-          <img src="images/men-3.jpg">
+          <img src="images/shannon.jpg">
           <div class="team-left-bottom">
             <h4>Psychic Readings</h4>
             <P>By Dr. Shannon Brown</P>
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="col-md-3 team-left-top">
-          <img src="images/men-2.jpg">
+          <img src="images/fern.jpg">
           <div class="team-left-bottom">
             <h4>Astrology</h4>
             <P>By Fern Capella</P>
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="col-md-3 team-left-top">
-          <img src="images/men-1.jpg">
+          <img src="images/cris.jpg">
           <div class="team-left-bottom">
             <h4>Energy Healings</h4>
             <P>By Cris Chapman</P>
@@ -124,7 +124,7 @@
           </div>
         </div>
         <div class="col-md-3 team-left-top">
-          <img src="images/men-1.jpg">
+          <img src="images/gabrielle.jpg">
           <div class="team-left-bottom">
             <h4>Intuitive Readings</h4>
             <P>By Gabrielle Renee</P>
@@ -138,7 +138,7 @@
   </div>
 <!--More and CLose>
 <script type="text/javascript">
- 
+
           function showHideCode(){
              $("#showdiv").toggle();
              $("#more").html($("#more").html()=="MORE"?"ClOSE":"MORE");
